# htmlsplitter

./: 1.html  2.html  README.md  msg_split.py  pyproject.toml  requirements.txt  source.html  tree.py
