[tool.poetry]
name = "testovoe-maddevs"
version = "0.1.0"
description = ""
authors = ["Igor <ig.g.like@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.12.3"
click = "^8.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
